--- a/css/style.css
+++ b/css/style.css
@@ -285,12 +285,12 @@ section {
 
 .home-img img{
     position: absolute;
-    bottom: 5rem;
+    bottom: 10rem;
     right: -20px;
     pointer-events: none;
-    width: 600px;
+    max-width: 580px;
     max-height: 100vh;
-    animation: moveUpDown 3s ease-in-out infinite;
+    animation: moveUpDown 13s ease-in-out infinite;
 }
 @keyframes moveUpDown {
     0%, 100% {
@@ -354,7 +354,7 @@ span {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 12rem;
+    gap: 10rem;
  }
 
 .services-container .services-box {
@@ -362,7 +362,7 @@ span {
     background: var(--bg-color);
     padding: 3rem 2rem 4rem;
     border-radius: 2rem;
-    box-shadow: 0.1rem .5rem var(--shadow-color);
+    box-shadow: 0 .1rem .5rem var(--shadow-color);
     text-align: center;
     border-top: .6rem solid var(--main-color);
     border-bottom: .6rem solid var(--main-color);
@@ -560,3 +560,251 @@ span {
 
 /* ===== Responsive Design ====== */
 
+@media (max-width: 1200px){
+    html {
+        font-size: 55%;
+    }
+    .home .profession-container .profession-box {
+        right: -10%;
+    }
+    .home .profession-container .overlay {
+        right: -6%;
+    }
+    .home-img img {
+        right: -3rem;
+    }
+}
+
+@media (max-width :1100px) {
+    .home .profession-container .profession-box {
+        right: -15%;
+    }
+    .home-img img {
+        max-width : 420px;
+        top: 17rem;
+        right: .5rem;
+    }
+}
+
+@media (max-width : 1024px) {
+    .header {
+        padding: 2rem 3%;
+    }
+    section {
+        padding: 10rem 3% 2rem;
+    }
+    .home .profession-container .profession-box {
+        right: -22%;
+    }
+    .home .profession-container .overlay {
+        right: -15%;
+    }
+    .home-img img {
+       max-width: 400px;
+       right: -2rem;
+    }
+}
+
+@media (max-width :991px) {
+    .navbar a:nth-child(1) {
+        color: var(--main-color);
+    }
+    navbar a.active::before {
+        background: var(--main-color);
+        opacity: .7;
+    }
+    .home .home-content {
+        max-width: 50rem;
+    }
+    .home .profession-container .profession-box {
+        right: -35%;
+    }
+    .home .profession-container .overlay {
+        right: -30%;
+    }
+    .home-img img {
+        display: none;
+    }
+    .footer {
+        padding: 2rem 3%;
+    }
+}
+
+@media (max-width : 896px) {
+    .navbar a:nth-child(2) {
+        color: var(--main-color);
+    }
+
+    .home .profession-container .profession-box {
+        right: -50%;
+    }
+
+    .home .profession-container .overlay {
+        right: -43%;
+    }
+}
+
+@media (max-width : 879px) {
+    .portfolio .portfolio-container {
+        grid-template-columns:  repeat(2,1fr);
+    }
+}
+
+@media (max-width : 780px ){
+    .navbar a:nth-child(2) {
+        color: var(--white-color);
+    }
+}
+
+@media (max-width : 768px) {
+    #menu-icon {
+        display: block;
+    }
+
+    #darkMode-icon {
+        position: absolute;
+        right: 7rem;
+        font-size: 2.6rem;
+        color: var(--text-color);
+        margin-bottom: .1rem;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 1rem 3%;
+        background: var(--bg-color);
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+        display: none;
+    }
+
+    .navbar.active {
+        display: block;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        color: var(--text-color);
+    }
+
+    .navbar a:nth-child(1),
+    .navbar a:nth-child(2) {
+        color: var(--text-color);
+    }
+
+    .navbar a.active {
+        color: var(--main-color);
+    }
+
+    .navbar a::before {
+        display: none;
+    }
+
+    .home {
+        padding: 0 3% 23rem;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .home-content h3 {
+        font-size: 2.6rem;
+    }
+
+    .home-content h1 {
+        font-size: 5rem;
+    }
+
+    .home-content .social-media a {
+        margin: 2.5rem .75rem 3rem;
+    }
+
+    .home .profession-container {
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .home .profession-container .profession-box {
+        position: fixed;
+        top: 450px;
+        left: 0;
+        width: 100%;
+    }
+
+    .home .profession-box .profession {
+        padding: 0 13px;
+        left: auto;
+        transform-origin: 0;
+    }
+
+    .home .profession-box .profession:nth-child(1) {
+        transform: rotate(-90deg) translate(-120px, -210px);
+    }
+
+    .home .profession-box .profession:nth-child(1) i {
+        margin-right: 0;
+    }
+
+    .home .profession-box .profession:nth-child(1) {
+        transform: rotate(0deg) translate(0, -325px);
+    }
+
+    .home .profession-box .profession:nth-child(3) {
+        transform: rotate(90deg) translate(-115px, -450px);
+    }
+
+    .home .profession-box .profession:nth-child(2) {
+        transform: rotate(180deg) translate(-220px, -325px);
+    }
+
+    .home .profession-box .circle {
+        position: fixed;
+        width: 670px;
+        height: 670px;
+        z-index: -1;
+    }
+
+    .home .profession-container .overlay {
+        position: fixed;
+        top: 70rem;
+        left: 50%;
+        right: 0;
+        transform: rotate(90deg) translate(-50%, 50%) scaleY(3);
+        border-width: 23.9rem;
+    }
+
+    .about {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .about-content h2 {
+        text-align: center;
+    }
+
+    .about-img img {
+        width: 70vw;
+        margin-top: -2rem;
+    }
+}
+
+@media (max-width :58px ) {
+    .portfolio .portfolio-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width : 450px ) {
+    html {
+        font-size: 50%;
+    }
+
+    #darkMode-icon {
+        right: 6rem;
+    }
+}
